# pluginloader

./: .cruft.json  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md
.github/workflows/: build.yml
src/: console.cpp  console.h  dllmain.cpp  loader.cpp  loader.h  pch.h  util.cpp  util.h  versioninfo.rc
src/proxy/: Readme.md  d3d11.cpp  dinput8.cpp  dsound.cpp  dsound.def  none.cpp  proxy.h  xinput1_3.cpp  xinput1_3.def
